// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fromQuery > should create record from query.js 1`] = `
{
  "field1": StringFieldValue {
    "props": {
      "value": "hello",
    },
  },
}
`;

exports[`fromQuery > should create record from query.js 2`] = `
{
  "field1": SelectFieldValue {
    "props": {
      "value": "opt1",
    },
  },
}
`;

exports[`fromQuery > should create record from query.js 3`] = `
{
  "field1": StringFieldValue {
    "props": {
      "value": "hello",
    },
  },
  "field2": SelectFieldValue {
    "props": {
      "value": "opt1",
    },
  },
}
`;

exports[`should create record 1`] = `
ResultType {
  Symbol(Val): Record {
    "autoIncrement": undefined,
    "createdAt": r {
      "props": {
        "value": 2022-02-01T00:00:00.000Z,
      },
    },
    "createdBy": undefined,
    "createdByProfile": null,
    "displayValues": RecordDisplayValues {
      "props": {},
    },
    "id": RecordId {
      "props": {
        "value": "record",
      },
    },
    "tableId": TableId {
      "props": {
        "value": "table",
      },
    },
    "updatedAt": r {
      "props": {
        "value": 2022-02-01T00:00:00.000Z,
      },
    },
    "updatedBy": undefined,
    "updatedByProfile": null,
    "values": RecordValues {
      "props": Map {},
    },
  },
  Symbol(T): true,
}
`;
